fix: button hover

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -418,6 +418,7 @@ img {
   transition: all 0.3s ease-in-out;
   z-index: 1000;
 }
+
 .modal {
   position: relative;
   display: flex;
@@ -445,14 +446,16 @@ img {
   transform: translateY(48px);
   box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
+
 .modal--visible {
-  display: block;
+  display: flex;
 
 }
 
+
 .modal-close {
   position: absolute;
-  top: 0;
+  top: 15px;
   right: 0;
   display: inline-block;
   width: 52px;
@@ -1015,8 +1018,15 @@ img {
   
 }
 @media (max-width: 766px) {
+  .modal {
+    width: 315px;
+  }
   .modal__image {
     display: none;
+  }
+  .modal__content {
+    align-self: center;
+    width: 240px;
   }
   .modal__wrap {
 
@@ -1029,6 +1039,9 @@ img {
   }
   .modal__list {
     align-self: flex-start
+  }
+  .modal-close {
+    top: -2px;
   }
 }
 @media (max-width: 750px) {
@@ -1166,12 +1179,12 @@ img {
   }
 
 }
-@media (max-width: 620px) {
+/* @media (max-width: 620px) {
   .modal-close {
     top: -5px;
     right: -5px;
   }
-}
+} */
 @media (max-width: 528px) {
   .help__item {
     align-self: center;
@@ -1570,4 +1583,19 @@ img {
 }
 .friends__list {
   padding-left: 0px;
+}
+
+.modal-close:hover {
+  background-color: #FDDCC4;
+
+}
+.modal-overlay:hover .modal-close {
+  background-color: #FDDCC4;
+}
+
+.modal:hover .modal-close {
+  background-color: transparent;
+}
+.modal:hover .modal-close:hover {
+  background-color: #FDDCC4;
 }
