fix: adaptive carousel

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1471,6 +1471,8 @@ img {
 @media (max-width: 1279px) {
   .friends__wrapper {
     justify-content: center;
+    margin-left: 0px;
+    margin-right: 0px;
 
   }
   .carousel-wrapper {
@@ -1481,7 +1483,7 @@ img {
     left: -630px;
   }
   .friends__list {
-    margin-left: 140px;
+    margin-left: 140px ;
     margin-right: 140px;
     gap: 40px;
   }
@@ -1499,21 +1501,26 @@ img {
 
 }
 @media (max-width: 870px) {
+  
   .friends__item {
     max-width: 270px;
   }
-  .friends__wrapper {
-    margin-left: 50px;
-    margin-right: 0;
-  }
   .friends__list {
-    margin-left: 130px;
-    margin-right: 130px;
+    /* margin-left: 130px; */
+    /* margin-right: 130px; */
     gap: 40px;
   }
   
 }
 @media (max-width: 767px) {
+  .friends__list {
+    margin-left: 150px !important ;
+    margin-right: 0;
+    gap: 40px;
+  }
+  .carousel-wrapper {
+    max-width: 270px;
+  }
   .friends__list li:last-child {
     display: none;
   }
@@ -1523,8 +1530,8 @@ img {
   .friends__list {
     align-self: center;
     justify-content: center;
-    margin-left: 115px;
-    margin-right: 130px;
+    /* margin-left: 115px; */
+    /* margin-right: 130px; */
     /* gap: 40px; */
   }
   
@@ -1533,22 +1540,11 @@ img {
 @media (max-width: 616px) {
   .friends__list {
     display: flex;
-    margin-left: 80px;
-    margin-right: 130px;
+    /* margin-left: 80px; */
+    /* margin-right: 130px; */
   }
   .friends__list li {
     align-self: center;
-  }
-}
-@media (max-width: 485px) {
-  .friends__list {
-    margin-left: 60px;
-    margin-right: 130px;
-  }
-}
-@media (max-width: 400px) {
-  .friends__list {
-    margin-left: 60px;
   }
 }
 .carousel {
